# 2D-lidar-RCnn-Ros

./: .gitignore  .gitmodules  README.md  getDataset.py  large_files.txt  lidarRingShow.py  neuralNetwork.ipynb  neuralNetworkSim.ipynb  point_cloud.py  ring_cloud.py  rviz.rviz  sensorBagUnpacker.ipynb  sensorBagUnpacker.py
DeepLearning/: example.py
geometry/: README.md  demo.py  geometry-read.py  igs2stl.py  igs_show.py  igs_viewer.py  random_cuts_on_box.py  random_shapes_on_surface.py
husky/src/map_creator_script/nav2_random_map_generator/: makefile
husky/src/map_creator_script/nav2_random_map_generator/random_world/: model.sdf
husky/src/map_creator_script/nav2_random_map_generator/random_world/models/heightmap/: model.config  model.sdf
husky/src/map_creator_script/nav2_random_map_generator/random_world/models/mobile_base/: model.config  model.sdf  model.urdf
husky/src/map_creator_script/nav2_random_map_generator/random_world/models/pcg_sample_walls/: model.config  model.sdf
husky/src/map_creator_script/nav2_random_map_generator/random_world/models/pcg_sample_walls/meshes/: TBkDmPrARY.stl
husky/src/map_creator_script/nav2_random_map_generator/src/: obstacle.cpp
husky_sim/src/gazebo_map_plugin/: CMakeLists.txt  factory.cc  package.xml
husky_sim/src/gazebo_robot_plugin/: CMakeLists.txt  exploration_scan.cc  package.xml
husky_sim/src/geos/examples/: CMakeLists.txt  capi_read.cpp  cpp_read.cpp
husky_sim/src/husky_description/urdf/: husky.urdf.xacro
husky_sim/src/husky_description/urdf/accessories/: hokuyo_ust10.urdf.xacro
husky_sim/src/husky_gazebo/launch/: husky_empty_world.launch  husky_random_world.launch  random_world.launch
husky_sim/src/husky_gazebo/worlds/: random_world_plugin.world
husky_sim/src/map_creator_script/: argstxt  maps_creation.ipynb  random_map_generator.py
husky_sim/src/map_creator_script/nav2_random_map_generator/random_maps/: random_map.pgm
husky_sim/src/map_creator_script/nav2_random_map_generator/src/: map.cpp  random-map
husky_sim/src/mastering_ros_demo_pkg/: CMakeLists.txt
husky_sim/src/mastering_ros_demo_pkg/launch/: demo_topic.launch
husky_sim/src/mastering_ros_demo_pkg/src/: demo_service_client.cpp  demo_service_server.cpp
husky_sim/src/mastering_ros_demo_pkg/srv/: demo_srv.srv
kitti_velodyne_bin_to_pcd/: README.md  main.cpp
